# Hello-world-contract

./: Cargo.toml  README.md  package-lock.json  package.json
src/: errors.rs  lib.rs  storage.rs  tests.rs  types.rs
tests/: example.rs
