[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
license = "Apache-2.0"
repository = ""
description = "Stellar Rust Soroban contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["std"] }